--- a/Sharing 1/styles.css
+++ b/Sharing 1/styles.css
@@ -1,5 +1,77 @@
-h1, h2, p{
+*{
+    margin:0;
+    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+}
+/* HEADER */
+
+header {
+    text-align: center;
+    margin: 0 200px;
+    border-bottom: 1px solid grey;
+}
+header h1 {
+    padding-bottom: 20px;
+}
+header nav {
+    
+    display: flex;
+    justify-content: center;
+}
+header nav a {
+    padding: 10px 20px;
+    text-decoration: none;
+    color: black;
+}
+header nav a:hover{
+    background: lightblue;
+}
+/* MAIN */
+section{
+    margin: 50px 200px;
+}
+section h2{
+    text-align: center;
+    margin:20px;
+}
+/* SECTION #about-me */
+#about-me .content{
+    display: flex;
+}
+#about-me .content .hero {
+    height: 300px;
+    background-size: cover;
+    border-radius: 30px;
+    margin-right: 30px;
+}
+#about-me .content p{
+    text-align: center;
+    margin: auto;
+    font-size: 1.5rem;
+}
+
+/* FOOTER */
+footer{
+    display: flex;
+    justify-content: center;
+    background-color: #f3f3f3;
+    padding: 20px;
+}
+footer ul {
+    list-style: none;
+    display: flex;
+}
+footer ul li a{
+    font-size: 1rem;
+    color: black;
+    text-decoration: none;
+    padding: 10px;
+}
+footer ul li a:hover{
+    opacity: 0.5;
+}
+/* h1, h2, p{
+    
     text-align: center;
 }
 
@@ -37,12 +109,9 @@ header a {
     padding-right: 8px;
 }
 
-.hero {
-    height: 555px;
-    background-size: cover;
-}
+
 
 footer{
     padding-top: 10px;
     padding-bottom: 10px;
-}
+} */
